objects/FCO_Search__c.object
<CustomObject>
    <label>FCO Search</label>
    <nameField>
        <displayFormat>FCOS-{000000}</displayFormat>
        <label>FCO Search Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FCO Search</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>FCO__c</fullName>
        <label>FCO</label>
        <referenceTo>FCO__c</referenceTo>
        <relationshipLabel>FCO Search</relationshipLabel>
        <relationshipName>FCO_Search</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Join_1__c</fullName>
        <label>Join 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Join_2__c</fullName>
        <label>Join 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Join_3__c</fullName>
        <label>Join 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logic_1__c</fullName>
        <label>Logic 1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logic_2__c</fullName>
        <label>Logic 2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logic_3__c</fullName>
        <label>Logic 3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product 1</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>product1</relationshipLabel>
        <relationshipName>product1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product 2</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>product2</relationshipLabel>
        <relationshipName>product2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product 3</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>product3</relationshipLabel>
        <relationshipName>product3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MajorEnd_1__c</fullName>
        <label>MajorEnd 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MajorEnd_2__c</fullName>
        <label>MajorEnd 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MajorEnd_3__c</fullName>
        <label>MajorEnd 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinorEnd_1__c</fullName>
        <label>MinorEnd 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinorEnd_2__c</fullName>
        <label>MinorEnd 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinorEnd_3__c</fullName>
        <label>MinorEnd 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomEnd_1__c</fullName>
        <label>CustomEnd 1</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomEnd_2__c</fullName>
        <label>CustomEnd 2</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomEnd_3__c</fullName>
        <label>CustomEnd 3</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SibexFCO_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SibexFCO Id</label>
        <referenceTo>FCO__c</referenceTo>
        <relationshipLabel>FCOSearch</relationshipLabel>
        <relationshipName>FCOSearch3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MajorStart_1__c</fullName>
        <label>MajorStart 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MajorStart_2__c</fullName>
        <label>MajorStart 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MajorStart_3__c</fullName>
        <label>MajorStart 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinorStart_1__c</fullName>
        <label>MinorStart 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinorStart_2__c</fullName>
        <label>MinorStart 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinorStart_3__c</fullName>
        <label>MinorStart 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName1__c</fullName>
        <label>ProductName1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName2__c</fullName>
        <label>ProductName2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName3__c</fullName>
        <label>ProductName3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_1_End__c</fullName>
        <label>Serial 1 End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_2_End__c</fullName>
        <label>Serial 2 End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_3_End__c</fullName>
        <label>Serial 3 End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomStart_1__c</fullName>
        <label>CustomStart 1</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomStart_2__c</fullName>
        <label>CustomStart 2</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomStart_3__c</fullName>
        <label>CustomStart 3</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevisionEnd_1__c</fullName>
        <label>RevisionEnd 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevisionEnd_2__c</fullName>
        <label>RevisionEnd 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevisionEnd_3__c</fullName>
        <label>RevisionEnd 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Time__c</fullName>
        <label>Schedule Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>01:00 AM</fullName>
                </value>
                <value>
                    <fullName>02:00 AM</fullName>
                </value>
                <value>
                    <fullName>03:00 AM</fullName>
                </value>
                <value>
                    <fullName>04:00 AM</fullName>
                </value>
                <value>
                    <fullName>05:00 AM</fullName>
                </value>
                <value>
                    <fullName>06:00 AM</fullName>
                </value>
                <value>
                    <fullName>07:00 AM</fullName>
                </value>
                <value>
                    <fullName>08:00 AM</fullName>
                </value>
                <value>
                    <fullName>09:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>01:00 PM</fullName>
                </value>
                <value>
                    <fullName>02:00 PM</fullName>
                </value>
                <value>
                    <fullName>03:00 PM</fullName>
                </value>
                <value>
                    <fullName>04:00 PM</fullName>
                </value>
                <value>
                    <fullName>05:00 PM</fullName>
                </value>
                <value>
                    <fullName>06:00 PM</fullName>
                </value>
                <value>
                    <fullName>07:00 PM</fullName>
                </value>
                <value>
                    <fullName>08:00 PM</fullName>
                </value>
                <value>
                    <fullName>09:00 PM</fullName>
                </value>
                <value>
                    <fullName>10:00 PM</fullName>
                </value>
                <value>
                    <fullName>11:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line_1__c</fullName>
        <label>Product Line 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line_2__c</fullName>
        <label>Product Line 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line_3__c</fullName>
        <label>Product Line 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serial_1_Start__c</fullName>
        <label>Serial 1 Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_2_Start__c</fullName>
        <label>Serial 2 Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_3_Start__c</fullName>
        <label>Serial 3 Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>product7</relationshipLabel>
        <relationshipName>product7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CalculatedEnd_1__c</fullName>
        <label>CalculatedEnd 1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalculatedEnd_2__c</fullName>
        <label>CalculatedEnd 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalculatedEnd_3__c</fullName>
        <label>CalculatedEnd 3</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevisionStart_1__c</fullName>
        <label>RevisionStart 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevisionStart_2__c</fullName>
        <label>RevisionStart 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevisionStart_3__c</fullName>
        <label>RevisionStart 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentifierType_1__c</fullName>
        <label>IdentifierType 1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentifierType_2__c</fullName>
        <label>IdentifierType 2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentifierType_3__c</fullName>
        <label>IdentifierType 3</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_1__c</fullName>
        <label>Product Family 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oncology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family_2__c</fullName>
        <label>Product Family 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oncology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family_3__c</fullName>
        <label>Product Family 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oncology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CalculatedStart_1__c</fullName>
        <label>CalculatedStart 1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalculatedStart_2__c</fullName>
        <label>CalculatedStart 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalculatedStart_3__c</fullName>
        <label>CalculatedStart 3</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NativePartNumber1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NativePartNumber1</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>FCOSearch</relationshipLabel>
        <relationshipName>FCOSearch4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NativePartNumber2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NativePartNumber2</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>FCOSearch</relationshipLabel>
        <relationshipName>FCOSearch5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NativePartNumber3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NativePartNumber3</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>FCOSearch</relationshipLabel>
        <relationshipName>FCOSearch6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Serial_End__c</fullName>
        <label>Target Serial End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditional_Search__c</fullName>
        <label>Conditional Search</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Product_Line__c</fullName>
        <label>Target Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Serial_Start__c</fullName>
        <label>Target Serial Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_1_Attribute_1__c</fullName>
        <label>Product 1 Attribute 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Linac Energies</fullName>
                </value>
                <value>
                    <fullName>Version</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_1_Attribute_2__c</fullName>
        <label>Product 1 Attribute 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Linac Energies</fullName>
                </value>
                <value>
                    <fullName>Version</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_2_Attribute_3__c</fullName>
        <label>Product 2 Attribute 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Linac Energies</fullName>
                </value>
                <value>
                    <fullName>Version</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Product_Family__c</fullName>
        <label>Target Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oncology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_1_SW_Build_End__c</fullName>
        <label>Product 1 SW Build End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_1_SW_Major_End__c</fullName>
        <label>Product 1 SW Major End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_1_SW_Minor_End__c</fullName>
        <label>Product 1 SW Minor End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_2_SW_Build_End__c</fullName>
        <label>Product 2 SW Build End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_2_SW_Major_End__c</fullName>
        <label>Product 2 SW Major End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_2_SW_Minor_End__c</fullName>
        <label>Product 2 SW Minor End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_3_SW_Build_End__c</fullName>
        <label>Product 3 SW Build End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_3_SW_Major_End__c</fullName>
        <label>Product 3 SW Major End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_3_SW_Minor_End__c</fullName>
        <label>Product 3 SW Minor End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_1_SW_Build_Start__c</fullName>
        <label>Product 1 SW Build Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_1_SW_Major_Start__c</fullName>
        <label>Product 1 SW Major Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_1_SW_Minor_Start__c</fullName>
        <label>Product 1 SW Minor Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_2_SW_Build_Start__c</fullName>
        <label>Product 2 SW Build Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_2_SW_Major_Start__c</fullName>
        <label>Product 2 SW Major Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_2_SW_Minor_Start__c</fullName>
        <label>Product 2 SW Minor Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_3_SW_Build_Start__c</fullName>
        <label>Product 3 SW Build Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_3_SW_Major_Start__c</fullName>
        <label>Product 3 SW Major Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_3_SW_Minor_Start__c</fullName>
        <label>Product 3 SW Minor Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_1_SW_Revision_End__c</fullName>
        <label>Product 1 SW Revision End</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_2_SW_Revision_End__c</fullName>
        <label>Product 2 SW Revision End</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_3_SW_Revision_End__c</fullName>
        <label>Product 3 SW Revision End</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restricted_to_Same_Product__c</fullName>
        <label>Restricted to Model Only</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Product_Attribute_1__c</fullName>
        <label>Target Product Attribute 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Linac Energies</fullName>
                </value>
                <value>
                    <fullName>Version</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Product_Attribute_2__c</fullName>
        <label>Target Product Attribute 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Linac Energies</fullName>
                </value>
                <value>
                    <fullName>Version</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Product_Attribute_3__c</fullName>
        <label>Target Product Attribute 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Linac Energies</fullName>
                </value>
                <value>
                    <fullName>Version</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_1_SW_Revision_Start__c</fullName>
        <label>Product 1 SW Revision Start</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_2_SW_Revision_Start__c</fullName>
        <label>Product 2 SW Revision Start</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_3_SW_Revision_Start__c</fullName>
        <label>Product 3 SW Revision Start</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Product_SW_Build_End__c</fullName>
        <label>Target Product SW Build End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Product_SW_Major_End__c</fullName>
        <label>Target Product SW Major End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Product_SW_Minor_End__c</fullName>
        <label>Target Product SW Minor End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Product_SW_Build_Start__c</fullName>
        <label>Target Product SW Build Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Product_SW_Major_Start__c</fullName>
        <label>Target Product SW Major Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Product_SW_Minor_Start__c</fullName>
        <label>Target Product SW Minor Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Product_SW_Revision_End__c</fullName>
        <label>Target Product SW Revision End</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Product_SW_Revision_Start__c</fullName>
        <label>Target Product SW Revision Start</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>